# grpc_server_course

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
course/: client.py  server.py
course/pb/: course_category_pb2.py  course_category_pb2_grpc.py
course/proto/: course_category.proto
course/service/: category.py
